--- a/admin.html
+++ b/admin.html
@@ -23,7 +23,7 @@
     <div id="tickets"></div>
 
     <script>
-        const ws = new WebSocket('wss://YOUR-RENDER-WS-URL'); // Replace with your deployed WS URL
+        const ws = new WebSocket('wss://ticket-server-5we9.onrender.com'); // Replace with your deployed WS URL
         let isAdmin = false;
 
         function adminLogin() {
