--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
     function openAdminPanel() {
       const password = prompt("Enter admin password:");
-      if (password === "mySuperSecretAdminPass") {  // Change this password
+      if (password === "luckygaming623") {  // Change this password
         window.location.href = "/admin.html";
       } else {
         alert("Incorrect password. Access denied.");
